Multi-arm Multi-stage Clinical Studies with Treatment Selection. 
Biometrika. 99(2):494-501.

Question or suggestions about the package can be sent to

   jaki.thomas@gmail.com

--------------------CHANGE LOG--------------------------------------------
Version 1.1

  o New function 'ordinal.mams' for ordinal and binary endpoints
  o New function 'tite.mams' for time-to-event endpoints
  o Effect sizes can be specified on the traditional or probability scale
  o Harmonised function and input names (most notably, 'step_down_mams' and
    'update_mams' are now called 'stepdown.mams' and 'update.mams')
  o Corrected minor bugs in mams
    
--------------------------------------------------------------------------
Version 1.01

  o Corrected minor bug in mams.sim for K=1

--------------------------------------------------------------------------
Version 1.0

  o Altered mams function to improve consistency for different allocation
    ratios

--------------------------------------------------------------------------
Version 0.9

  o Corrected a bug in update_mams

--------------------------------------------------------------------------
Version 0.8

  o Removal of some depreciated code

--------------------------------------------------------------------------
Version 0.7

  o Modified print and summary to only return integer sample sizes
  o Updated mams function to deal with minor inconsistency when J=1

--------------------------------------------------------------------------
Version 0.6

  o Corrected a bug in new.bounds 
  o Corrected a bug in mams.sim
  o A few minor bugs in the plot functions corrected
  o Arguments bty and las for the plot functions added
  o Inconsistencies in the documentation removed

--------------------------------------------------------------------------
Version 0.5

  o A bug in function mams.sim corrected

--------------------------------------------------------------------------
Version 0.4

  o A bug in function mams corrected
