@@ -16,7 +16,8 @@ Version 1.1
 
   o New function 'ordinal.mams' for ordinal and binary endpoints
   o New function 'tite.mams' for time-to-event endpoints
-  o Effect sizes can be specified on the traditional or probability scale
+  o Effect sizes can be specified on traditional or probability scale
+  o Search for sample size is capped at a maximum value
   o Harmonised function and input names (most notably, 'step_down_mams' and
     'update_mams' are now called 'stepdown.mams' and 'update.mams')
   o Corrected minor bugs in mams
